feat(mobile): identity grid for admin MFA and tenant grouping (#557)
* feat(mobile): person-first admin enrollment names and detail identity

Stop stuffing Global/Tenant Admin MFA into enrollmentName so the authenticator can show the person. Park I-2026-09-15 for a dedicated role field; calibrate Detail and Pending titles without repeating the installation.

* feat(mobile): show purpose, role, and tenant on authenticator screens

Bind now signs isSystemIntegration and adminType so the phone can label
admin MFA without parsing enrollmentName, and tenant name survives the
native-query row unwrap so Home and Detail can group regular enrollments.

* fix(mobile): add isSystemIntegration to bind response test fixtures

EnrollmentBindResponseDto requires isSystemIntegration after the identity
grid bind contract; align Jest mocks so yarn typecheck/validate:ci pass.

Co-authored-by: Marc Gagnon <mgagp@users.noreply.github.com>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>
Co-authored-by: Marc Gagnon <mgagp@users.noreply.github.com>